[package]
name = "every_space"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "1.1"
rayon = "1.10"
iced = { version = "0.14", features = ["image", "advanced", "wgpu", "svg", "canvas", "smol"] }
url = "2.5.8"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread"] }
lyon_algorithms = "1.0"
rfd = "0.17.2"
trash = "5.0"
