[package]
name = "every_space"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "1.1"
rayon = "1.10"
iced = { version = "0.14", features = ["image", "advanced", "wgpu", "svg", "canvas", "smol"] }
url = "2.5.8"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread"] }
lyon_algorithms = "1.0"
rfd = "0.17.2"
trash = "5.0"
mft = "0.7.0"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Threading",
] }

[build-dependencies]
winres = "0.1"
